# multi-agent-expert-sourcing

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  QUICK_START_TESTING.md  README.md  TESTING.md  projectagenda.md  railway.json  test-all.sh
.cursor/rules/: github.mdc  rule-push-to-github.mdc
ai_generic_docs/: CI_CD_Setup.md
ai_project_docs/: TESTING.md
backend/: Dockerfile  LOCAL_POSTGRES_SETUP.md  Makefile  ag_ui_adapter.py  alembic.ini  create_extraction_markdown.py  main.py  pyproject.toml  run_cv_evaluation.py  test_db.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  chat.py  company.py  cv.py  nats.py
backend/app_agents/: __init__.py  chat_agents.py  company_crew.py  cv_agents.py
backend/core/: config.py  nats.py
backend/data/: lisa_shaw_ground_truth.py
backend/data/fictional_cvs/: Mary.docx
backend/data/ground_truth_comparisons/: __init__.py  nel_cv_comparison_20250615_220835.json
backend/data/ground_truths/: __init__.py  janine_nel_ground_truth.py  lisa_shaw_ground_truth.py
backend/docs/: AGENT_FRAMEWORK_SELECTION_GUIDE.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_INTEGRATION_GUIDE.md  AGENT_MODULE_OUTLINE.md  AGENT_PROMPTING_PRINCIPLES.md  AGENT_RECRUITING_LANDSCAPE.md  CV_EXTRACTION_TESTING_README.md  CV_Semantic_Search.md  Company_Web_Scraping.md  FASTAPI_BEST_PRACTICES.md  GRAPHQL_API_PRINCIPLES.md  LOCAL_POSTGRES_SETUP.md  NATS_INTEGRATION_GUIDE.md  NATS_MESSAGE_SYSTEM_PRINCIPLES.md  REST_API_PRINCIPLES.md
backend/migrations/: env.py
backend/migrations/versions/: c15e3c35108d_add_comprehensive_cv_schema_with_.py  c826ba324aaf_fix_cv_schema_to_use_existing_cvs_table_.py
backend/models/: __init__.py  base.py  chat_models.py  cv_models.py
backend/schemas/: __init__.py  chat_schemas.py  company_schemas.py  cv_schemas.py  nats_schemas.py
backend/scripts/: test_db.py
backend/services/: chat_service.py  company_service.py  cv_extraction_service.py  cv_nats_integration.py  cv_service.py  cv_status_service.py  nats_service.py
backend/tests/: README.md  __init__.py  test_api.py  test_company_crew.py  test_cv_agents.py  test_cv_extraction.py  test_simple.py
backend/tests/integration/: __init__.py  test_broken_mocks.py  test_nats_integration.py  test_openai_integration.py  test_service_availability.py
frontend/: .lintstagedrc.js  Dockerfile  Makefile  RESPONSIVENESS_IMPROVEMENTS.md  TAILWIND_DEBUG_GUIDE.md  bun.lockb  jest.config.js  jest.setup.js  jest.setup.ts  next.config.js  package.json  playwright.config.ts  tailwind-test.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/app/company-registration/: page.tsx
frontend/components/: AGUIChat.tsx
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/docs/: React_Frontend_Principles.md
frontend/e2e/: chat.spec.ts
frontend/hooks/: useApi.ts
frontend/lib/: api.ts  validations.ts
frontend/playwright-report/: index.html
frontend/test-results/: .last-run.json
(+123 files in other folders)
